Fix: Flash Overlapping User Menu.
Because:
* If a flash message is on the screen and the user opens the dropdown menu, the flash message will appear on top of it.

This commit:
* Sets the dropdown menu's background to white instead of using the default transparent value for the background color.

--- a/app/assets/stylesheets/components/odin-dropdown-menu.scss
+++ b/app/assets/stylesheets/components/odin-dropdown-menu.scss
@@ -19,6 +19,7 @@
     border-radius: 10px;
     transform-origin: top right;
     transition: transform ease-in 0.2s, opacity ease-in 0.1s;
+    background-color: $white;
   }
 
   &__toggle {
